fix CSS for post images on narrow screens

--- a/css/style.scss
+++ b/css/style.scss
@@ -238,10 +238,12 @@ footer {
     margin-left: auto;
     margin-right: auto;
     max-height: 350px;
+    max-width: 100%;
 
     img {
         max-height: 300px;
-
+        max-width: 100%;
+        
         border-radius: 30px;
     }
     figcaption {
